--- a/src/02-timer.html
+++ b/src/02-timer.html
@@ -6,6 +6,7 @@
     <title>Countdown timer</title>
     <link rel="stylesheet" href="css/common.css" />
     <link rel="stylesheet" href="css/flatpicker.css" />
+    <!-- <link rel="stylesheet" href="dist/notiflix-3.2.6.min.css" /> -->
   </head>
   <body>
     <p><a href="index.html">Go back</a></p>
