--- a/src/02-timer.html
+++ b/src/02-timer.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Countdown timer</title>
+
     <link rel="stylesheet" href="css/common.css" />
-    <link rel="stylesheet" href="css/flatpicker.css" />
-    <!-- <link rel="stylesheet" href="dist/notiflix-3.2.6.min.css" /> -->
+    <link rel="stylesheet" href="css/timer.css" />
+    <title>Countdown timer</title>
   </head>
   <body>
     <p><a href="index.html">Go back</a></p>
